--- a/otherthings/main.css
+++ b/otherthings/main.css
@@ -1,7 +1,7 @@
 body {
             text-align: center;
             font-family: 'Source Sans Pro', sans-serif;
-            background-color: #2f3237;
+            background-color: #222831;
             color: #d4d5d6;
         }
         a {
