--- a/otherthings/main.css
+++ b/otherthings/main.css
@@ -2,7 +2,7 @@ body {
             text-align: center;
             font-family: 'Source Sans Pro', sans-serif;
             background-color: #222831;
-            color: #d4d5d6;
+            color: #222831;
         }
         a {
             color: #7289da;
